<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!--项目和api模块的版本号-->
    <groupId>top.fblue</groupId>
    <artifactId>water</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.0.1-SNAPSHOT</revision>
        <java.version>21</java.version>
        <mysql.version>8.2.0</mysql.version>
        <mybatis-plus.version>3.5.12</mybatis-plus.version>
        <mybatis-spring.version>3.0.3</mybatis-spring.version>
        <mybatis-plus-jsqlparser.version>3.5.12</mybatis-plus-jsqlparser.version>
        <easyexcel.version>3.3.4</easyexcel.version>
        <bcrypt.version>0.10.2</bcrypt.version>
    </properties>


    <modules>
        <module>water-common</module>
        <module>water-framework</module>
    </modules>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
